use typed identifiers in case study